turn on branch coverage

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run and display coverage
       run: |
-        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml
+        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml --cov-branch
         cat coverage.xml
 
     - name: Upload coverage reports to Codecov
